# fandango-classroom-test

./: .gitignore  README.md  dummy.fan  pyproject.toml  requirements.txt
.github/workflows/: classroom.yml
src/fandango_classroom_test/: __init__.py
tests/: test_fan.py
